# yt-audio-workbench

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HELP.md  LICENSE  Makefile  ONBOARDING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build_win.bat  check-deps.ps1  check-deps.sh  help_window.py  help_window.py.bak  i18n.py  pyproject.toml  requirements.txt  setup-venv.ps1  setup-venv.sh  tooltips.py  ui_extras.py  ui_extras.py.bak  workbench_core.py  yt_audio_backup_gui.py  yt_audio_backup_gui.py.bak  yt_audio_workbench.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-binaries.yml  build.yml  ci.yml  i18n.yml  security.yml
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HELP.md  ONBOARDING.md  THIRD_PARTY_NOTICES.md  UI_to_Core_Map.md
lang/: en.json  fr.json
scripts/: check_i18n_keys.py
tests/: test_cookies_conversion.py  test_join_and_id3.py  test_resolve_tool_path.py
